--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -59,64 +59,43 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1111. maximum-nesting-depth-of-two-valid-parentheses-strings.cpp">
+    <ClCompile Include="1074. number-of-submatrices-that-sum-to-target.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1110. delete-nodes-and-return-forest.cpp">
+    <ClCompile Include="1073. adding-two-negabinary-numbers.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1109. corporate-flight-bookings.cpp">
+    <ClCompile Include="1072. flip-columns-for-maximum-number-of-equal-rows.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1108. defanging-an-ip-address.cpp">
+    <ClCompile Include="1071. greatest-common-divisor-of-strings.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1106. parsing-a-boolean-expression.cpp">
+    <ClCompile Include="1054. distant-barcodes.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1105. filling-bookcase-shelves.cpp">
+    <ClCompile Include="1053. previous-permutation-with-one-swap.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1104. path-in-zigzag-labelled-binary-tree.cpp">
+    <ClCompile Include="1052. grumpy-bookstore-owner.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1103. distribute-candies-to-people.cpp">
+    <ClCompile Include="1051. height-checker.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1096. brace-expansion-ii.cpp">
+    <ClCompile Include="1049. last-stone-weight-ii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1081. Smallest Subsequence of Distinct Characters.cpp">
+    <ClCompile Include="1048. longest-string-chain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1095. find-in-mountain-array.cpp">
+    <ClCompile Include="1047. remove-all-adjacent-duplicates-in-string.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1094. car-pooling.cpp">
+    <ClCompile Include="1046. last-stone-weight.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1093. statistics-from-a-large-sample.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1092. shortest-common-supersequence.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1091. shortest-path-in-binary-matrix.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1090. largest-values-from-labels.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1089. duplicate-zeros.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1080. insufficient-nodes-in-root-to-leaf-paths.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1079. letter-tile-possibilities.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1078. occurrences-after-bigram.cpp">
+    <ClCompile Include="1045. longest-duplicate-substring.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
