--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -59,10 +59,22 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1044. longest-duplicate-substring.cpp">
+    <ClCompile Include="1042. flower-planting-with-no-adjacent.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1043. partition-array-for-maximum-sum.cpp">
+    <ClCompile Include="1041. robot-bounded-in-circle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1040. moving-stones-until-consecutive-ii.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1039. minimum-score-triangulation-of-polygon.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1038. binary-search-tree-to-greater-sum-tree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1037. valid-boomerang.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
