--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -77,5 +77,20 @@
     <ClCompile Include="1037. valid-boomerang.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="1035. uncrossed-lines.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1034. coloring-a-border.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1033. moving-stones-until-consecutive.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1029. two-city-scheduling.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1030. matrix-cells-in-distance-order.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
