--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -59,46 +59,22 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1031. maximum-sum-of-two-non-overlapping-subarrays.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1026. maximum-difference-between-node-and-ancestor.cpp">
+    <ClCompile Include="1013. partition-array-into-three-parts-with-equal-sum.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1027. longest-arithmetic-sequence.cpp">
+    <ClCompile Include="1015. smallest-integer-divisible-by-k.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1028. recover-a-tree-from-preorder-traversal.cpp">
+    <ClCompile Include="1016. binary-string-with-substrings-representing-1-to-n.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="1025. divisor-game.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1021. remove-outermost-parentheses.cpp">
+    <ClCompile Include="1014. best-sightseeing-pair.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="1022. sum-of-root-to-leaf-binary-numbers.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1024. video-stitching.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1023. camelcase-matching.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1018. binary-prefix-divisible-by-5.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1017. convert-to-base-2.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1019. next-greater-node-in-linked-list.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="1020. number-of-enclaves.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
