--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -62,16 +62,37 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="984. string-without-aaa-or-bbb.cpp">
+    <ClCompile Include="977. squares-of-a-sorted-array.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="981. time-based-key-value-store.cpp">
+    <ClCompile Include="978. longest-turbulent-subarray.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="983. minimum-cost-for-tickets.cpp">
+    <ClCompile Include="979. distribute-coins-in-binary-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="982. triples-with-bitwise-and-equal-to-zero.cpp">
+    <ClCompile Include="980. unique-paths-iii.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="973. k-closest-points-to-origin.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="976. largest-perimeter-triangle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="974. subarray-sums-divisible-by-k.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="975. odd-even-jump.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="970. powerful-integers.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="969. pancake-sorting.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="971. flip-binary-tree-to-match-preorder-traversal.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
