--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="961. n-repeated-element-in-size-2n-array.cpp" />
-    <ClCompile Include="962. maximum-width-ramp.cpp" />
-    <ClCompile Include="963. minimum-area-rectangle-ii.cpp" />
-    <ClCompile Include="964. least-operators-to-express-number.cpp" />
+    <ClCompile Include="957. prison-cells-after-n-days.cpp" />
+    <ClCompile Include="958. check-completeness-of-a-binary-tree.cpp" />
+    <ClCompile Include="959. regions-cut-by-slashes.cpp" />
+    <ClCompile Include="960. delete-columns-to-make-sorted-iii.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
     <ClCompile Include="test.cpp" />
