--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -62,28 +62,16 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="953. verifying-an-alien-dictionary.cpp">
+    <ClCompile Include="5139. n-th-tribonacci-number.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="954. array-of-doubled-pairs.cpp">
+    <ClCompile Include="5140. alphabet-board-path.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="955. delete-columns-to-make-sorted-ii.cpp">
+    <ClCompile Include="5141. largest-1-bordered-square.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="956. tallest-billboard.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="949. largest-time-for-given-digits.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="951. flip-equivalent-binary-trees.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="950. reveal-cards-in-increasing-order.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="952. largest-component-size-by-common-factor.cpp">
+    <ClCompile Include="5142. stone-game-ii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
