--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -62,16 +62,37 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5139. n-th-tribonacci-number.cpp">
+    <ClCompile Include="945. minimum-increment-to-make-array-unique.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5140. alphabet-board-path.cpp">
+    <ClCompile Include="946. validate-stack-sequences.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5141. largest-1-bordered-square.cpp">
+    <ClCompile Include="947. most-stones-removed-with-same-row-or-column.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5142. stone-game-ii.cpp">
+    <ClCompile Include="948. bag-of-tokens.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="941. valid-mountain-array.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="944. delete-columns-to-make-sorted.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="942. di-string-match.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="937. reorder-log-files.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="938. range-sum-of-bst.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="939. minimum-area-rectangle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="940. distinct-subsequences-ii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
