--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="5139. n-th-tribonacci-number.cpp" />
-    <ClCompile Include="5140. alphabet-board-path.cpp" />
-    <ClCompile Include="5141. largest-1-bordered-square.cpp" />
-    <ClCompile Include="5142. stone-game-ii.cpp" />
+    <ClCompile Include="937. reorder-log-files.cpp" />
+    <ClCompile Include="938. range-sum-of-bst.cpp" />
+    <ClCompile Include="939. minimum-area-rectangle.cpp" />
+    <ClCompile Include="940. distinct-subsequences-ii.cpp" />
+    <ClCompile Include="941. valid-mountain-array.cpp" />
+    <ClCompile Include="942. di-string-match.cpp" />
+    <ClCompile Include="944. delete-columns-to-make-sorted.cpp" />
+    <ClCompile Include="945. minimum-increment-to-make-array-unique.cpp" />
+    <ClCompile Include="946. validate-stack-sequences.cpp" />
+    <ClCompile Include="947. most-stones-removed-with-same-row-or-column.cpp" />
+    <ClCompile Include="948. bag-of-tokens.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
     <ClCompile Include="test.cpp" />
